blog layout issue fixed

--- a/core/css/style.css
+++ b/core/css/style.css
@@ -28,18 +28,22 @@ body.full-width-layout #content-outer, body.default-layout #content-outer,body.f
 		max-width: 960px;
 margin: 0 auto;	
 }
-body.full-width-home #wrapper {
+body.home #wrapper {
 	margin: 0 auto 20px auto ;
 }
-body.full-width-layout #wrapper{margin: 0 auto 20px auto; }
+//body.full-width-layout #wrapper{margin: 0 auto 20px auto; }
 body.full-width-layout div#container, body.full-width-layout div#footer, body.full-width-no-box div#container, body.full-width-no-box div#footer {
     width: 100%;
     max-width: 100%;
     padding: 0;
 }
+//body.full-width-layout #wrapper {border: none; background-color: transparent;}
+//body.full-width-layout #wrapper #content-outer {background-color: #ffffff; display: table;width: 70%;padding: 22px;border: 1px solid #e5e5e5;-moz-border-radius: 4px;-webkit-border-radius: 4px;border-radius:4px;
+}
 .full-width-no-box .skip-container { padding: 0px;}
 .full-width-no-box #logo {
-	margin: 10px 0;
+	//margin: 10px 0;
+	padding: 10px 0;
 }
 .full-width-no-box #header {background-color: #585858;	}
 .full-width-no-box .top-menu {margin: 0; padding-top: 4px;}
